# lua-pcre2

./: .clang-format  .gitmodules  .luacheckrc  README.md  build_deps.sh  configure.ac
.github/workflows/: test.yml
rockspecs/: pcre2-0.1.0-1.rockspec  pcre2-0.1.1-1.rockspec  pcre2-0.1.2-1.rockspec  pcre2-0.2.0-1.rockspec  pcre2-0.3.0-1.rockspec  pcre2-scm-1.rockspec
src/: Makefile.in  pcre2.c
test/: pcre2_test.lua
